# sentinel

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
config/: crypto.yaml  etfs.yaml  indices.yaml  macro_assets.yaml  macro_calendar.yaml  news_feeds.yaml  subreddits.yaml  tracked_entities.yaml  world_anchor.yaml
deploy/: README.md  sentinel.service
docs/: ARCHITECTURE.md  HANDBOOK.md  SPEC.md
frontend/: .gitignore  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts
frontend/src/: app.css  app.html
proposals/claim-verification/: CLAUDE_CODE_PROMPT.md  PLAN.md
proposals/morning-game-plan/: CLAUDE_CODE_PROMPT.md  PLAN.md
proposals/source-ticker-tagging/: CLAUDE_CODE_PROMPT.md  PLAN.md
src/sentinel/: article_fetch.py  chat.py  config.py  crypto_regime.py  (+32 more)
tests/: conftest.py  test_article_fetch.py  test_autofade.py  test_book_risk.py  test_call_review.py  test_can_price.py  test_charts.py  test_chunking.py  test_crypto_signals.py  test_dashboard.py  test_db_reset.py  test_dossier.py  test_earnings.py  test_edgar.py  test_filings.py  test_fund_positions.py  test_game_plan.py  test_grounding.py  test_health.py  test_holds.py  test_hot_movers.py  test_leaders_wallet.py  test_llm_parsing.py  test_llm_routing.py  test_lookup.py  test_materiality.py  test_money_math.py  test_news_dedup.py  test_news_feed_window.py  test_news_filter.py  test_news_retag.py  test_news_tickers.py  test_open_paper_position.py  test_preflight.py  test_prices.py  test_prompts.py  test_reddit_feed.py  test_research_desk.py  test_social.py  test_source_tags.py  (+6 more)
(+164 files in other folders)
