[project]
name = "sentinel"
version = "0.1.0"
description = "Discord-resident SEC filings + social-pulse trading-intelligence bot."
requires-python = ">=3.12"
dependencies = [
    "discord.py>=2.4",
    "apscheduler>=3.10",
    "httpx>=0.27",
    "sqlmodel>=0.0.22",
    "ollama>=0.4",
    "praw>=7.7",
    "yfinance>=0.2.40",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "pandas-market-calendars>=4.4",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "loguru>=0.7",
    "tenacity>=9.0",
    "pydantic-settings>=2.5",
    "feedparser>=6.0",
    "nicegui>=3.12.0",
    "psutil>=7.2.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sentinel"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
